cambio endpoint de organization 'get' y agrego otro para agregar palabras prohibidas
