# swagger.yaml
@@ -630,21 +630,52 @@ paths:
 
   organization/:id/restrictedWords:
     get:
-      summary: returns orcanization's restricted words
+      summary: returns organization's restricted words
+      parameters:
+        - in: path
+          name: id
+          description: organization's id
+          required: true
+          schema:
+            type: object
+            required: 
+              - id
+      responses:
+        200:
+          description: Successful request
+          name: restrictedWords
+          schema:
+            type: object
+            description: restricted words array
+        500:
+          description: Server faild
+          schema:
+            $ref: '#/definitions/Error'
+        404:
+              description: organization dose not exist
+              schema:
+                $ref: '#/definitions/Error'
+    put:
+      summary: add a new restricted word to the organization
       parameters:
         - in: body
-          name: userToken
+          name: userToken and restrictedWords
           required: true
           schema:
             type: object
             required: 
               - token
+              - restrictedWords
             properties:
                 token:
                   type: string
                   description: user's token
+                restrictedWords:
+                  type: string
+                  description: new restricted word
         - in: path
-          name: organizationID
+          name: id
+          description: organization's id
           required: true
           schema:
             type: object
